--- a/.github/workflows/build@master.yml
+++ b/.github/workflows/build@master.yml
@@ -13,6 +13,12 @@ jobs:
       - uses: actions/checkout@v2
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'npm'
+      - run: npm install
+      - run: npm run lint
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
