--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
+    "lint": "eslint src/**/*.js -f json -o dist/eslint/report.json; exit 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "copy-webpack-plugin": "^10.2.0",
+    "eslint": "^8.7.0",
+    "eslint-config-google": "^0.14.0",
     "webpack": "^5.66.0",
     "webpack-cli": "^4.9.1"
   }
