--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,3 +10,6 @@ sonar.organization=bonjour-anuj
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+# ESLint report path
+sonar.eslint.reportPaths=dist/eslint/report.json
