Fix sonarcloud eslint reporting issue
SonarCloud Scan not picking input files to link it with eslint report: "WARN: No input file found for..."

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,10 +6,10 @@ sonar.organization=bonjour-anuj
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=.
+sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
 # ESLint report path
-sonar.eslint.reportPaths=dist/eslint/report.json
+sonar.eslint.reportPaths=./dist/eslint/report.json
