--- a/.github/workflows/build@master.yml
+++ b/.github/workflows/build@master.yml
@@ -21,6 +21,8 @@ jobs:
       - run: npm run lint
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
+        with:
+          projectBaseDir: $GITHUB_WORKSPACE
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
