--- a/.github/workflows/build@master.yml
+++ b/.github/workflows/build@master.yml
@@ -22,7 +22,7 @@ jobs:
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         with:
-          projectBaseDir: $GITHUB_WORKSPACE
+          projectBaseDir: ''
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
