Adds background service-worker & content script
1. Adds vanilla background service worker
2. Adds vanilla content script for all https urls
3. Configures webpack for respective bundles along with non-eval source map.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -2,5 +2,19 @@
   "version": "1.0.0",
   "manifest_version": 3,
   "name": "Web Notes",
-  "description": "annotate text, save clippings of a web page."
+  "description": "annotate text, save clippings of a web page.",
+  "background": {
+    "service_worker": "app.bundle.js",
+    "type": "module"
+  },
+  "content_scripts": [
+    {
+      "matches": [
+        "https://*/*"
+      ],
+      "js": [
+        "init.bundle.js"
+      ]
+    }
+  ]
 }
