--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "lint": "eslint src/**/*.js -f json -o dist/eslint/report.json; exit 0",
+    "lint": "eslint 'src/**/*.js' -f json -o dist/eslint/report.json; exit 0",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
