--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "author": "",
   "license": "ISC",
+  "dependencies": {
+    "jquery": "^3.6.0"
+  },
   "devDependencies": {
     "copy-webpack-plugin": "^10.2.0",
     "eslint": "^8.7.0",
