--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dexie": "^3.2.0",
     "jquery": "^3.6.0"
   },
   "devDependencies": {
